# puny-manager

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
completions/: _puny-manager  puny-manager.bash  puny-manager.fish
packaging/arch/: puny-manager-howdy.pam  puny-manager-howdy.socket  puny-manager-howdy@.service  puny-manager.tmpfiles
puny/: cli.py  config.py  crypto.py  export.py  generator.py  getting.py  howdy.py  howdy_helper.py  i18n.py  paths.py  storage.py  util.py  vault.py  version.py
puny_manager.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_config.py  test_crypto.py  test_export.py  test_howdy.py  test_howdy_helper.py  test_howdy_storage.py  test_i18n.py  test_storage.py  test_util.py  test_vault.py
